Replace placeholder images

--- a/html.html
+++ b/html.html
@@ -25,15 +25,15 @@
         <section class="portfolio">
             <h2>My Portfolio</h2>
             <div class="portfolio-grid">
-                <img src="https://picsum.photos/300/200?random=1" alt="Portfolio item 1" class="fade-in">
-                <img src="https://picsum.photos/300/200?random=2" alt="Portfolio item 2" class="fade-in">
-                <img src="https://picsum.photos/300/200?random=3" alt="Portfolio item 3" class="fade-in">
-                <img src="https://picsum.photos/300/200?random=4" alt="Portfolio item 4" class="fade-in">
-                <img src="https://picsum.photos/300/200?random=5" alt="Portfolio item 5" class="fade-in">
-                <img src="https://picsum.photos/300/200?random=6" alt="Portfolio item 6" class="fade-in">
-                <img src="https://picsum.photos/300/200?random=7" alt="Portfolio item 7" class="fade-in">
-                <img src="https://picsum.photos/300/200?random=8" alt="Portfolio item 8" class="fade-in">
-                <img src="https://picsum.photos/300/200?random=9" alt="Portfolio item 9" class="fade-in">
+                <img src="images/img1" alt="Portfolio item 1" class="fade-in">
+                <img src="images/img2" alt="Portfolio item 2" class="fade-in">
+                <img src="images/img3" alt="Portfolio item 3" class="fade-in">
+                <img src="images/img4" alt="Portfolio item 4" class="fade-in">
+                <img src="images/img5" alt="Portfolio item 5" class="fade-in">
+                <img src="images/img6" alt="Portfolio item 6" class="fade-in">
+                <img src="images/img7" alt="Portfolio item 7" class="fade-in">
+                <img src="images/img8" alt="Portfolio item 8" class="fade-in">
+                <img src="images/img9" alt="Portfolio item 9" class="fade-in">
                 <img src="https://picsum.photos/300/200?random=10" alt="Portfolio item 10" class="fade-in">
                 <img src="https://picsum.photos/300/200?random=11" alt="Portfolio item 11" class="fade-in">
                 <img src="https://picsum.photos/300/200?random=12" alt="Portfolio item 12" class="fade-in">
